--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head lang="uk">
     <meta charset="UTF-8">
-    <title>My Page</title>
+    <title>Katia's Page</title>
 
 
     <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
-<h1>Hello World</h1>
-<p>Hello Git</p>
-<div class="text2018">Hi 2018!!!</div>
+<div class="container">
+    <div class="left"></div>
+     <div class="right">right</div>
+    </div>
 </body>
 </html>
