[practice-1] first steps

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
 <div class="container">
-    <div class="left"></div>
-     <div class="right">right</div>
+    <div class="left">
+        <p><input type=search placeholder="Type here">
+            <input type="submit" value="Search"></p>
+    </div>
+    
+     <div class="right"></div>
     </div>
 </body>
 </html>
