[practice-1] list of products, quantity buttons, buy&cross buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <div class="left">
         <p><input type=search placeholder="Type here">
             <input type="submit" value="Search"></p>
-    </div>
+            <div class="leftt">
+                 <p>Tomatoes<br>Cookies<br>Cheese</p></div>
+                </div>
+                <div class="middle">
+                    
+                </div>
     
      <div class="right"></div>
     </div>
