[practice-2] one tooltip made

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
                  
                  
                  <div class="quantity">
-                        <button class="circular-minus-button" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                        <span class="tooltip" data-tooltip="tooltip">
+                        <button type="button" class="circular-minus-button">
                             <b>-</b>
                         </button>
+                        </span>
                         <input type="text" name="name" value="1">
                         <button class="circular-plus-button"><b>+</b></button>
                  </div>
