[practice-3] just need to push

--- a/index.html
+++ b/index.html
@@ -39,98 +39,25 @@
                 <button class="unbuy-button buy-button tooltip" data-tooltip="tooltip">Not Purchased</button>
             </div>
         </div>
-        <!--<div class="product">
-            <span class="prod-not-bought">Tomatoes</span>
-            <div class="quantity">
-                    <span class="tooltip" data-tooltip="tooltip">
-                        <button type="button" class="circular-minus-button">
-                            <b>-</b>
-                        </button>
-                    </span>
-                <input type="text" name="name" value="1">
-                <span class="tooltip" data-tooltip="tooltip">
-                        <button class="circular-plus-button"><b>+</b></button>
-                    </span>
-            </div>
-            <div class="buy-delete">
-                    <span class="tooltip" data-tooltip="tooltip">
-                        <button class="buy-button">Purchase</button>
-                    </span>
-                <span class="tooltip" data-tooltip="tooltip">
-                        <button class="delete-button"><b>&times</b></button>
-                    </span>
-            </div>
-        </div>
-        <div class="product">
-            <span class="prod-bought">Coockies</span>
-
-
-            <div class="quantity">
-                <input type="text" name="name" value="1">
-            </div>
-            <div class="buy-delete">
-                    <span class="tooltip" data-tooltip="tooltip">
-                        <button class="buy-button">Not Purchased</button>
-                    </span>
-            </div>
-        </div>
-        <div class="product">
-            <span class="prod-not-bought">Cheese</span>
-
-            <div class="quantity">
-                    <span class="tooltip" data-tooltip="tooltip">
-                        <button type="button" class="circular-minus-button">
-                            <b>-</b>
-                        </button>
-                    </span>
-                <input type="text" name="name" value="1">
-                <span class="tooltip" data-tooltip="tooltip">
-                        <button class="circular-plus-button"><b>+</b></button>
-                    </span>
-            </div>
-            <div class="buy-delete">
-                    <span class="tooltip" data-tooltip="tooltip">
-                        <button class="buy-button">Purchase</button>
-                    </span>
-                <span class="tooltip" data-tooltip="tooltip">
-                        <button class="delete-button"><b>&times</b></button>
-                    </span>
-            </div>
-        </div>-->
     </div>
-
 
     <div class="right">
         <div class="list-name">
             <h2>Left</h2>
         </div>
 
-        <div class="label-list">
-                <span class="label">
-                    <span class="title">Tomatoes</span>
-                    <span class="count">1</span>
-                </span>
+        <span class="label" id="prodCount-template" style="display: none">
+            <span class="title"></span>
+            <span class="count"></span>
+        </span>
 
-
-            <span class="label">
-                    <span class="title">Cheese</span>
-                    <span class="count">1</span>
-                </span>
-
-        </div>
+        <div class="label-list"></div>
 
         <div class="list-name">
             <h2>Purchased</h2>
         </div>
 
-        <div class="label-bought-list">
-                <span class="label-bought">
-                    <span class="title">Coockies</span>
-                    <span class="count">1</span>
-                </span>
-        </div>
-
-
+        <div class="label-bought-list"></div>
     </div>
 </div>
 
@@ -140,8 +67,5 @@
             Created by: <br><b>Kolesova Kateryna</b>
         </span>
 </div>
-
-
 </body>
-
 </html>
